# sgtsnepi-python

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml  pybind-ci.yml
sgtsnepi/: __init__.py  meson.build  sgtsne.py  sgtsne_pybind.cpp
src/: sgtsne_pybind.cpp
src/sgtsnepi/: sgtsne.py
subprojects/: sgtsnepi.wrap
subprojects/packagefiles/: disable_install.patch  windows_compat.patch
tests/: context.py  demo.py  test_imports.py  test_sgtsnepi.py  test_yin.py
