[project]
name = "sgtsnepi"
version = "0.3.8"
authors = [{name = "Alexandros Athanasiadis", email = "athanasiadisalex2@gmail.com"}]
description = "SG-t-SNE-Π wrapper for Python"
license = {text = "GPLv3"}
python-requires = ">=3.7"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy >= 1.19.5",
    "scipy >= 1.7.3",
    "nextprod >= 1.0",
]

[project.urls]
Homepage = "https://github.com/alex-unofficial/sgtsnepi-python"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "matplotlib >= 3.5",
    "pylint >= 2.17",
    "flake8 >= 6.0",
]

[build-system]
requires = [
  "wheel", # python package distribution lib.
  "meson>=1.1.0", # meson buildsystem
  'meson-python>=0.12.1', # meson to pip adapter
  "pybind11>=2.10.4", # c++ to Python binding
  "ninja>=1.11.1", # build tool for meson to use
]
build-backend = 'mesonpy'
