[metadata]
name = sgtsnepi
version = 0.1.0

author = Alexandros Athanasiadis
author_email = athanasiadisalex2@gmail.com

description = SG-t-SNE-Π wrapper for Python
long_description = file: README.md
long_description_content_type = text/markdown

license = GPLv3
license_files = LICENSE

url = https://github.com/alex-unofficial/sgtsnepi-python

python_requires = >=3.7

classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires = 
    setuptools>=61.0
    numpy >= 1.19.5
    scipy >= 1.14.1
    nextprod >= 1.0

packages = sgtsnepi
include_package_data = true

[options.extras_require]
dev = 
    matplotlib >= 3.9.2
    pylint >= 3.3.1
    flake8 >= 7.1.1

[options.package_data]
sgtsnepi = LICENSE, README.md, lib/*
